[tool.poetry]
name = "repl_python3_SelfreliantQuestionableRange"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
proxybroker = "^0.3.2"
twilio = "^6.46.0"
colorama = "^0.4.4"
lib = "^3.0.0"
bs4 = "^0.0.1"
pysimplegui = "^4.30.0"
colored = "^1.4.2"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
